--- a/angular.json
+++ b/angular.json
@@ -51,11 +51,9 @@
               "buildOptimizer": true,
               "budgets": [
                 {
-                  "type": "bundle",
-                  "name": "vendor",
-                  "baseline": "500kb",
-                  "warning": "100kb",
-                  "error": "200kb"
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 }
               ]
             }
